--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.1/build/reset/reset-min.css">
     <link href="stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="http://github.com/mojombo/tpw/raw/master/css/syntax.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
