--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,34 +1,52 @@
 /* Main page layout */
 
 body {
-    margin-top: 1.0em;
-    margin-bottom: 2.0em;
+    font-size: 100%;
+    padding-top: 1.5em; /* 24px */
+    padding-bottom: 3em; /* 48px */
     background-color: #FFFFFF;
-    font-family: "Trebuchet MS", Helvetica, Arial, FreeSans;
     color: #222;
+    font-family: "Trebuchet MS", Helvetica, Arial, FreeSans;
 }
+
 #main {
     margin: 0 auto;
     max-width: 700px;
 }
 
-/* Headers */
+/* Typography */
+
+h1     { font-size: 3em;         /* 16 x 3.375 = 48 */
+         line-height: 1.5em; }   /* 48 x 1.5   = 72 */
+h2     { font-size: 1.5em;       /* 16 x 1.5   = 24 */ 
+         line-height: 2em; }     /* 24 x 2     = 48 */
+p      { font-size: 1em;         /* 16 x 1     = 16 */
+         line-height: 1.5em;     
+         margin-bottom: 1.5em; }
+code   { font-size: 1em;
+         line-height: 1.5em;
+         font-family: Consolas, FreeMono, monospace;
+         margin-top: 0.5em; }
+p code { line-height: 1em; }
+pre    { padding: 1em 1em 0.9em 1em;
+         margin: 0 0 1.9em; 0; }
+a      { line-height: 1.5em }
 
 h1, h2, h3 { 
-    color: #860404;
+    color: #A10404;
 }
-h1, h1 a { 
-    font-size: 3.8em;
-    margin-bottom: 3px;
+
+h1 { 
+    text-shadow: #888 0 1px 1px;
     text-decoration: none;
-    text-shadow: #888 0 3px 10px;
 }
+
 h2 { 
-    font-size: 1.2em;
+    text-shadow: #888 0 1px 1px;
     text-transform: uppercase;
-    text-shadow: #888 0 1px 3px;
+    font-weight: bold;
+    letter-spacing: 0.1em;
 }
-h3 { text-align: center; }
 
 /* Special */
 
@@ -41,15 +59,7 @@ h3 { text-align: center; }
 
 .download { float: right; }
 
-code {
-    font-size: 0.8em;
-    font-family: Consolas, FreeMono, monospace;
-}
-
 pre {
-    margin-left: 20px;
-    margin-right: 30px;
-    padding: 15px;
     background: #ddd;
     color: #000;
     -webkit-border-radius: 5px;
@@ -59,8 +69,6 @@ pre {
     border-radius: 5px;
     border-bottom-right-radius: 20px;
 }
-
-hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
 
 #footer {
     color: #888;
