Added flattr button.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,29 @@
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.1/build/reset/reset-min.css">
     <link href="stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="http://github.com/mojombo/tpw/raw/master/css/syntax.css" media="screen" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">
+      <!--//--><![CDATA[//><!--
+        (function() {
+            var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = 'http://api.flattr.com/js/0.5.0/load.js?mode=auto';
+
+            t.parentNode.insertBefore(s, t);
+        })();//--><!]]>
+    </script>
   </head>
   <body>
     <div id="main">
 
-      <a href="http://github.com/eproxus/meck"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+      <div id="ribbon">
+        <div><a href="http://github.com/eproxus/meck">
+            <img src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
+                 alt="Fork me on GitHub" /></a></div>
+        <div><a class="FlattrButton"
+                href="http://eproxus.github.com/meck"></a></div>
+      </div>
 
       <div id="content" class="site">
 
