Add agner ribbon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   <body>
     <div id="main">
 
-      <div id="ribbon">
+      <div class="ribbon top_right">
         <div><a href="http://github.com/eproxus/meck">
             <img src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
                  alt="Fork me on GitHub" /></a></div>
@@ -43,7 +43,11 @@
     <div id="footer">
       <div>Get the source code on GitHub: <a href="http://github.com/eproxus/meck">eproxus/meck</a></div>
       <div>Page last updated {{ site.time | date: "%Y-%m-%d" }}.</div>
+
+
     </div>
+
+
 
     <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -54,6 +58,13 @@
     pageTracker._initData();
     pageTracker._trackPageview();
     </script>
+
+     <div class="ribbon bottom_right">
+        <div><a href="http://erlagner.org/">
+            <img src="images/agner-ribbon.png"
+                 alt="We Support Agner" /></a></div>
+      </div>
+
 
   </body>
 </html>
